--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
     
-  <p style="display:none;">Ralph runs away from the ice cream and towards Hawaii, </p>
+  <input id="sentence-input" type="text"></input>
           
     <form class="inputs">
 
@@ -40,5 +40,8 @@
 <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.19.min.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
+<script>
+  
 
+</script>
 </html>
