sentence and answers

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="styles/css/style.css"/>
   <link href='http://fonts.googleapis.com/css?family=Roboto:400' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+  <link rel="shortcut icon" href="tunafoot.ico"  type="image/x-icon"/>
 
   
 </head>
@@ -20,6 +21,7 @@
 
     
   <p style="display:none;" id="lastsentence">Ralph runs away from the ice cream and towards Hawaii, </p>
+  <p style="display:none;" id="wordbank"></p>
           
     <form class="inputs">
 
