--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 
     
 
-  <p style="display:none;" id="lastsentence">Ralph runs away from the ice cream and towards Hawaii, </p>
+  <p style="display:none;" id="lastsentence">Ralph runs away from the ice cream and towards Hawaii.</p>
   <p style="display:none;" id="wordbank"></p>
 
           
     <form class="inputs">
 
-        <input type="text" id="text" class="sentence-input" placeholder="" autofocus maxlength="20" value="" autocomplete="off"/>
+        <input type="text" id="text" placeholder="" autofocus maxlength="20" value="" autocomplete="off"/>
         <input type="button" id="button" value="Next"/>
 
     </form>
@@ -42,7 +42,7 @@
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.19.min.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
+<!--<script type="text/javascript" src="js/index.js"></script>-->
 <script type="text/javascript" src="js/script.js"></script>
 <script>
   
