--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.19.min.js"></script>
+<script type="text/javascript" src="js/underscore-min.js"></script>
 <!--<script type="text/javascript" src="js/index.js"></script>-->
 <script type="text/javascript" src="js/script.js"></script>
 <script>
