added yourSentance on enter

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <div id="main">
 
 
+
     
 
   <p style="display:none;" id="lastsentence">Ralph runs away from the ice cream and towards Hawaii.</p>
@@ -35,6 +36,10 @@
     <section id="story">
 
     </section>
+  </div>
+
+  <div id="story" style="display:none;">
+    <p id="sentences"></p>
   </div>
 
 
