added second to last question populating

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     
 
-  <p style="display:none;" id="lastsentence">Ralph runs away from the ice cream and towards Hawaii.</p>
+  <p style="display:none;" id="lastsentence"></p>
   <p style="display:none;" id="wordbank"></p>
 
           
