--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
 
   <p style="display:none;" id="lastsentence"></p>
-  <p style="display:none;" id="wordbank"></p>
+  <p style="display:none; color:#555;" id="wordbank"></p>
 
           
     <form class="inputs">
